--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vijay-dev01.github.io/My_web",
+  "homepage": "http://vijay-dev01.github.io/My_web",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
