--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0",
+    "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
